--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "repository": "https://github.com/eswat2/proto-tailwindcss-pixels.git",
   "bugs": "https://github.com/eswat2/proto-tailwindcss-pixels/issues",
   "homepage": "https://github.com/eswat2/proto-tailwindcss-pixels",
+  "private": true,
   "scripts": {
     "test": "jest",
     "deploy": "echo -- run [ np patch ]",
