--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": false,
   "scripts": {
     "test": "jest",
-    "deploy": "echo -- run [ np patch ]",
+    "deploy": "yarn test; echo -- run [ np patch ]",
     "format": "prettier --write *.js cSpell.json"
   },
   "dependencies": {},
