--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "repository": "https://github.com/eswat2/proto-tailwindcss-pixels.git",
   "bugs": "https://github.com/eswat2/proto-tailwindcss-pixels/issues",
   "homepage": "https://github.com/eswat2/proto-tailwindcss-pixels",
+  "engines": {
+    "node": "~18"
+  },
   "private": false,
   "scripts": {
     "test": "jest",
